fix: prevent overflow of flower graphic enabling sidescrollbar

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -111,6 +111,7 @@ body {
   width: 100%;
   max-width: 100%;
   min-height: 100vh;
+  overflow-x: hidden;
   font-family: var(--font-poppins);
   font-size: var(--type-body-size);
   line-height: var(--type-body-line-height);
